[package]
name = "aoc_2019_11"
version = "0.1.0"
authors = ["Till Rohrmann <trohrmann@apache.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_2019_7 = { path = "../aoc_2019_7" }
aoc_2019_2 = { path = "../aoc_2019_2" }
aoc_common = { path = "../aoc_common" }
